# snapdog-os-installer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  THIRD_PARTY_NOTICES.txt  about.hbs  about.toml  build.rs  deny.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/: Assets.car  icon.icns
assets/AppIcon.icon/: icon.json
docs/: architecture.md  platform-validation.md  releasing.md  windows-signing.md
packaging/linux/: build-manylinux.sh  cc.snapdog.os-installer.appdata.xml  cc.snapdog.os-installer.desktop  smoke-test-appimage.sh
packaging/macos/: Info.plist
scripts/: check-conventional-commits.py  check-live-manifests.py  check.sh  generate-macos-icon.sh  generate-notices.sh  package-linux.sh  package-macos.sh  package-windows.ps1  run-macos-debug.sh
src/: app.rs  catalog.rs  download.rs  drives.rs  flash.rs  lib.rs  macos_native.rs  main.rs  model.rs  pipeline.rs  windows_native.rs  worker.rs
src/pipeline/: linux.rs  macos.rs  windows.rs
src/worker/: linux.rs  macos.rs  windows.rs
