[package]
name = "snapdog-os-installer"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-only"
repository = "https://github.com/SnapDogRocks/snapdog-os-installer"
homepage = "https://snapdog.cc"
authors = ["Fabian Schmieder"]
description = "Guided cross-platform SD card writer for SnapDog OS"
build = "build.rs"

[dependencies]
eframe = { version = "=0.33.3", default-features = false, features = ["accesskit", "default_fonts", "wayland", "wgpu", "x11"] }
egui_extras = { version = "=0.33.3", default-features = false, features = ["image", "svg"] }
flate2 = "1"
hex = "0.4"
image = { version = "=0.25.9", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "http2", "json", "rustls-tls"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
unix-ancillary = "0.2.2"
wgpu = { version = "=27.0.1", default-features = false, features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
aligned-vec = "=0.6.4"
same-file = "=1.0.6"
wmi = { version = "=0.18.4", default-features = false }
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
wgpu = { version = "=27.0.1", default-features = false, features = ["dx12"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "=27.0.1", default-features = false, features = ["gles", "vulkan"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Local end-to-end diagnostics need release-like throughput for multi-gigabyte image preparation,
# while retaining debug assertions so the unsigned macOS worker exception can never leak into a
# normal release build.
[profile.diagnostic]
inherits = "release"
debug = 1
debug-assertions = true
overflow-checks = true
strip = false
lto = false
codegen-units = 16

# wayland-scanner 0.31.10 still pins quick-xml 0.39, which is affected by
# RUSTSEC-2026-0194 and RUSTSEC-2026-0195. Keep its released, API-compatible
# source locally with only the upstream quick-xml 0.41 manifest change until
# a compatible crates.io release ships.
[patch.crates-io]
wayland-scanner = { path = "vendor/wayland-scanner" }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
